# ktp-test-tool

./: CMakeLists.txt  channel-joiner.desktop  channel-joinerwindow.cpp  channel-joinerwindow.h  contactlistmodel.cpp  contactlistmodel.h  contactmodelfilter.cpp  contactmodelfilter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
